--- a/config.json
+++ b/config.json
@@ -344,6 +344,14 @@
 		{ "name": "Samurai Armor", "desc": "increases attack speed and fire rate", "id": 11, "price": 12000, "scale": 120 },
 		{ "name": "Dark Knight", "desc": "restores health when you deal damage", "id": 12, "price": 12000, "scale": 120 },
 		{ "name": "Tank Gear", "desc": "increases damage to buildings but reduces movement speed", "id": 13, "price": 15000, "scale": 120 },
+		{
+			"name": "Helicopter Hat",
+			"desc": "fly over players and buildings, nothing can stop you... or can it?",
+			"id": 17,
+			"price": 15000,
+			"scale": 120,
+			"spin": true
+		},
 		{ "name": "Assassin Gear", "desc": "Goes invisible when not moving. Can't eat. Increases movement speed", "id": 14, "price": 20000, "scale": 120 },
 		{ "name": "Potato Hat", "desc": "", "id": 15, "price": 0, "scale": 120, "dontSell": true },
 		{ "name": "Police Cap", "desc": "", "id": 16, "price": 0, "scale": 120, "dontSell": true }
